# MajuBersama-WarehouseInventorySystem

./: .clang-format  .clang-tidy  .gitignore  ARCHITECTURE.md  CMakeLists.txt  Makefile  README.md
cmake/: CompilerOptions.cmake  FindDependencies.cmake
config/: config.yaml.example  logging.yaml.example
docs/: api.yaml
docs/diagrams/: architecture.puml  data_model.puml  sequence.puml
src/: main.cpp
src/api/: CMakeLists.txt
src/api/controllers/: auth_controller.cpp  auth_controller.hpp  item_controller.cpp  item_controller.hpp
src/api/dto/: auth_dto.hpp  error_response.hpp  item_dto.hpp
src/api/middleware/: auth_middleware.cpp  auth_middleware.hpp  logging_middleware.cpp  logging_middleware.hpp
src/api/validators/: item_validator.cpp  item_validator.hpp
src/common/: CMakeLists.txt  config.hpp  logger.hpp  result.hpp
src/common/utils/: time_utils.hpp  uuid.hpp
src/core/: CMakeLists.txt
src/core/entities/: category.hpp  item.hpp  supplier.hpp  user.hpp  warehouse.hpp
src/core/repositories/: item_repository.hpp  user_repository.hpp  warehouse_repository.hpp
src/core/services/: auth_service.hpp  inventory_service.hpp
src/core/use_cases/: authenticate_user_use_case.cpp  authenticate_user_use_case.hpp  create_item_use_case.cpp  create_item_use_case.hpp  delete_item_use_case.cpp  delete_item_use_case.hpp  get_item_use_case.cpp  get_item_use_case.hpp  list_items_use_case.cpp  list_items_use_case.hpp  update_item_use_case.cpp  update_item_use_case.hpp
src/core/value_objects/: address.hpp  email.hpp  money.hpp  quantity.hpp
src/infrastructure/: CMakeLists.txt
src/infrastructure/cache/: cache_adapter.cpp  cache_adapter.hpp
src/infrastructure/database/: connection_pool.cpp  connection_pool.hpp  migration.cpp  migration.hpp
src/infrastructure/database/migrations/: 001_initial_schema.sql
src/infrastructure/messaging/: message_broker.cpp  message_broker.hpp
src/infrastructure/repositories/: postgres_item_repository.cpp  postgres_item_repository.hpp  postgres_user_repository.cpp  postgres_user_repository.hpp
tests/: CMakeLists.txt
tests/fixtures/: mock_data.hpp  test_data.sql
tests/integration/: CMakeLists.txt  test_db_connection.cpp  test_item_repository.cpp
tests/unit/: CMakeLists.txt  test_address.cpp  test_authenticate_user_use_case.cpp  test_create_item_use_case.cpp  test_delete_item_use_case.cpp  test_email.cpp  test_get_item_use_case.cpp  test_item_entity.cpp  test_list_items_use_case.cpp  test_money.cpp  test_quantity.cpp  test_result.cpp  test_update_item_use_case.cpp  test_user_entity.cpp  test_uuid.cpp
